写完了注册和登录

--- a/src/sass/reg.scss
+++ b/src/sass/reg.scss
@@ -134,6 +134,16 @@
                 font-weight: 700;
                 padding-left: 18px;
             }
+
+            b {
+                line-height: 16px;
+                font-size: 14px;
+                position: absolute;
+                left: 344px;
+                display: block;
+                width: 100px;
+                top: 12px;
+            }
         }
 
 
