--- a/src/css/reg.css
+++ b/src/css/reg.css
@@ -206,3 +206,13 @@ input {
   font-weight: 700;
   padding-left: 18px;
 }
+
+.main .container p b {
+  line-height: 16px;
+  font-size: 14px;
+  position: absolute;
+  left: 344px;
+  display: block;
+  width: 100px;
+  top: 12px;
+}
