第七天的代码

--- a/src/sass/address.scss
+++ b/src/sass/address.scss
@@ -264,6 +264,15 @@
     font-size: 12px;
 }
 
+.wztb {
+    background-image: url(../images/a.png);
+    background-position: -280px -296px;
+    background-size: 589px;
+    width: 18px;
+    height: 18px;
+    display: inline-block;
+}
+
 .write_info {
     margin: 14px 0px 50px 20px;
 }
