--- a/src/css/goods.css
+++ b/src/css/goods.css
@@ -893,6 +893,7 @@ body .layui-layer-msg {
 }
 
 .main .w .upper .upper_r .button a {
+  cursor: pointer;
   display: inline-block;
   width: 180px;
   height: 44px;
