--- a/src/sass/goods.scss
+++ b/src/sass/goods.scss
@@ -743,6 +743,7 @@
                     position: relative;
 
                     a {
+                        cursor: pointer;
                         display: inline-block;
                         width: 180px;
                         height: 44px;
