--- a/src/css/base.css
+++ b/src/css/base.css
@@ -134,6 +134,7 @@ body .layui-layer-btn1 {
 body .layui-layer-msg {
   width: 120px !important;
   height: 45px !important;
+  font-size: 30px !important;
   text-align: center;
   line-height: 50px !important;
   padding: 0px 0px !important;
